--- a/SEGMA6/Fundamentos WEB/atividade2/index.html
+++ b/SEGMA6/Fundamentos WEB/atividade2/index.html
@@ -50,8 +50,63 @@
         </dd>
     </dl>
     <hr>
-
-
+    <h3>Grupo de Pesquisa Pixar</h3>
+    <p>
+        O Grupo de Pesquisa Pixar foi criado em 2004 com o propósito de:
+    </p>
+    <ol type="I">
+        <li>Desenvolver tecnologias</li>
+        <li>Promover a inovação</li>
+        <li>Fornecer consultoria</li>
+        <li>Participar de comunidades de pesquisa externas</li>
+    </ol>
+    <hr>
+    <h4>Alguns Filmes de Curta-Metragem da Pixar</h4>
+    <ol type="a">
+        <li>Lou <a href="./Imagens/lou.jpg" target="_blank"><img width="35px" src="./Imagens/lou.jpg" alt="Lou"></a>
+        </li>
+        <li>Piper <a href="./Imagens/piper.jpg" target="_blank"><img width="35px" src="./Imagens/piper.jpg"
+                    alt="Piper"></a></li>
+        <li>Day & Night <a href="./Imagens/day e night.jpg" target="_blank"><img width="35px"
+                    src="./Imagens/day e night.jpg" alt="Day & Night"></a></li>
+        <li>Air Mater <a href="./Imagens/air mater.jpg" target="_blank"><img width="35px" src="./Imagens/air mater.jpg"
+                    alt="Air Mater"></a></li>
+        <li>Party Central <a href="./Imagens/party central.jpg" target="_blank"><img width="35px"
+                    src="./Imagens/party central.jpg" alt="Party Central"></a></li>
+    </ol>
+    <hr>
+    <h1>Galerias</h1>
+    <h2>Vídeos</h2>
+    <video src="./Videos/Pixar.mp4" width="300px" controls></video>
+    <video src="./Videos/Lou.mp4" poster="./Imagens/lou.jpg" width="300px" controls></video>
+    <video src="./Videos/PIPER.mp4" poster="./Imagens/piper.jpg" width="300px" controls></video>
+    <video src="./Videos/DayNight.mp4" poster="./Imagens/day e night.jpg" width="300px" controls></video>
+    <video src="./Videos/AirMater.mp4" poster="./Imagens/air mater.jpg" width="300px" controls></video>
+    <video src="./Videos/PartyCentral.mp4" poster="./Imagens/party central.jpg" width="300px" controls></video>
+    <hr>
+    <h2>Áudios</h2>
+    <audio src="./Audios/Cars.mp3" controls>Carros 2</audio><br>
+    <audio src="./Audios/InsideOut.mp3" controls>Divertida Mente</audio>
+    <hr>
+    <h2>Imagens</h2>
+    <img height="200px" src="./Imagens/WALLE.png" alt="WALL-E">
+    <p>WALL-E: Conta a história de um robô chamado WALL-E, criado no ano de 2100 para limpar a Terra coberta por lixo.
+    <p>
+    <img height="200px" src="./Imagens/up.jpg" alt="UP">
+    <p>
+        UP: Conta as aventuras que Carl (um idoso viúvo com seu sonho de se mudar para o magnífico Paraíso das
+        Cachoeiras, na Venezuela)
+        enfrenta ao conhecer Russel (um garoto escoteiro amante da natureza com seu sonho de protegê-la), Muntz (o
+        explorador difamado buscando
+        restabelecer sua reputação), Kevin (a ave tropical) e Dug (um golden retriever falante).
+    </p>
+    <img height="200px" src="./Imagens/brave.png" alt="Valente">
+    <p>
+        VALENTE: Merida é uma habilidosa arqueira e a impetuosa filha do Rei Fergus e da Rainha Elinor. Determinada a
+        trilhar o seu próprio
+        destino, Merida desafia um costume ancestral, se negando a casar com o primogênito de um dos quatro clãs.
+    </p>
+    <hr>
+    <a href="index.html"><p>Topo</p></a>
 </body>
-
 </html>
