--- a/SEGMA6/FerrramentasDeDesenvolvimentoWEB/atividade2/index.html
+++ b/SEGMA6/FerrramentasDeDesenvolvimentoWEB/atividade2/index.html
@@ -64,7 +64,7 @@
     <h4>Alguns Filmes de Curta-Metragem da Pixar</h4>
     <ol type="a">
         <li>Lou <a href="./Imagens/lou.jpg" target="_blank"><img width="35px" src="./Imagens/lou.jpg" alt="Lou"></a>
-        </li>
+        </li>l
         <li>Piper <a href="./Imagens/piper.jpg" target="_blank"><img width="35px" src="./Imagens/piper.jpg"
                     alt="Piper"></a></li>
         <li>Day & Night <a href="./Imagens/day e night.jpg" target="_blank"><img width="35px"
@@ -92,7 +92,7 @@
     <img height="200px" src="./Imagens/WALLE.png" alt="WALL-E">
     <p>WALL-E: Conta a história de um robô chamado WALL-E, criado no ano de 2100 para limpar a Terra coberta por lixo.
     <p>
-    <img height="200px" src="./Imagens/up.jpg" alt="UP">
+        <img height="200px" src="./Imagens/up.jpg" alt="UP">
     <p>
         UP: Conta as aventuras que Carl (um idoso viúvo com seu sonho de se mudar para o magnífico Paraíso das
         Cachoeiras, na Venezuela)
@@ -107,6 +107,9 @@
         destino, Merida desafia um costume ancestral, se negando a casar com o primogênito de um dos quatro clãs.
     </p>
     <hr>
-    <a href="index.html"><p>Topo</p></a>
+    <a href="index.html">
+        <p>Topo</p>
+    </a>
 </body>
+
 </html>
