--- a/SEGMA6/FerrramentasDeDesenvolvimentoWEB/atividade2/index.html
+++ b/SEGMA6/FerrramentasDeDesenvolvimentoWEB/atividade2/index.html
@@ -8,14 +8,14 @@
 </head>
 
 <body>
-    <img width="250px" src="./Imagens/Disney-Pixar.jpg" alt="Disney Pixar">
+    <img width="250px" src="./Imagens/Disney-Pixar.jpg" alt="Disney Pixar" id="topo">
     <p>
         Também conhecida como Pixar Animation Studios, é uma empresa de animação digital norte-americana pertencente à
         The Walt Disney Company. É
         especializada em alta tecnologia de computação gráfica.
     </p>
 
-    <h3><a href="http://pixar.com/">Site Oficial Galerias</a></h3>
+    <h3><a href="http://pixar.com/" target="_blank">Site Oficial</a><a href="#galerias">Galerias</a></h3>
 
     <h3>Alguns Primeiros Filmes:</h3>
 
@@ -75,7 +75,7 @@
                     src="./Imagens/party central.jpg" alt="Party Central"></a></li>
     </ol>
     <hr>
-    <h1>Galerias</h1>
+    <h1 id="galerias">Galerias</h1>
     <h2>Vídeos</h2>
     <video src="./Videos/Pixar.mp4" width="300px" controls></video>
     <video src="./Videos/Lou.mp4" poster="./Imagens/lou.jpg" width="300px" controls></video>
@@ -107,7 +107,7 @@
         destino, Merida desafia um costume ancestral, se negando a casar com o primogênito de um dos quatro clãs.
     </p>
     <hr>
-    <a href="index.html">
+    <a href="#topo">
         <p>Topo</p>
     </a>
 </body>
